# Win32NativeGuiApp

./: CMakeLists.txt  application.cpp  application.hpp  encoding_utf8.exe.manifest  event.cpp  event.hpp  exception.hpp  main.cpp  object.hpp  pch.cpp  pch.hpp  widget.cpp  widget.hpp  win32_console.cpp  win32_console.hpp
